<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Relative-Layout</string>
    <string name="hello_world">Complex Relative Layout</string>
    <string name="action_settings">Settings</string>
    <string name="etOne">One</string>
    <string name="etTwo">Two</string>
    <string name="etThree">Three</string>
    <string name="etFour">Four</string>
    <string name="etFive">FIve</string>
    <string name="etSix">SIx</string>
    <string name="etSeven">Seven</string>
    <string name="etEight">Eight</string>

</resources>
